css/styles.css
/*
Colours:
Dark Blue #001e44
Light Blue #1d5ecc
CTA Orange #db7c00
CTA Green #1BC2A3
Grey #ABABAB

Font Sizes:
10px = 0.625rem
12px = 0.75rem      captions sorting
14px = 0.875rem 
16px = 1rem         (base) regular (400) - body, medium (500) - subhead 2
18px = 1.125rem     medium (500)- buttons + subhead 1
20px = 1.25rem      medium (500)- page header
24px = 1.5rem       medium (500)- home pic caption text
30px = 1.875rem
32px = 2rem         regular (400) - picture headers

*/

body {
  margin: auto;
  padding-top: 0px;
  font-family: roboto;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

header {
  background: #001e44;
}

header,
footer {
  color: #fff;
}

h2 {
  font-size: 1.5rem;
  font-weight: 600;
}

h3 {
  font-size: 1.125rem;
}

footer p {
  font-size: 1.2rem;
  font-weight: 500;
}

/*Hidden for small screens and hamburgers*/
.desktop-nav-account,
#menu-drop-down,
#search-drop-down,
.large-images,
.medium-images,
.bottom-nav,
.desktop-nav {
  display: none;
}

/*general input styles*/

input {
  /*because safari is annoying!*/
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 1; /*stops faded appearance*/
  display: inline;
  padding: 10px;
  margin: 0;
  border: none;
  font-size: 1.125rem;
  font-weight: 500;
  border-radius: 5px 0px 0px 5px;
}

.input-container {
  display: block;
  position: relative;
  width: fit-content;
  height: 100%;
  background-color: white;
  box-sizing: border-box;
  border: none;
  padding: 0;
  border-radius: 5px;
  height: 41px;
  margin: 0;
}
.search li {
  margin: 0 -30px;
}

.submit-button,
.search-button {
  position: absolute;
  color: #fff;
  background: #db7c00;
  cursor: pointer;
  border-radius: 0px 5px 5px 0px;
  font-weight: 500;
  text-shadow: 2px 2px 2px #001e44;
  position: absolute;
  top: 0;
  right: 0;
}

.email-input,
.search-bar {
  height: 100%;
  width: 100%;
  background-color: transparent;
  padding: 0px 155px 0px 5px;
}
.search-button,
.submit-button {
  height: 100%; /*needed to fix firefox 1px difference!*/
  width: 150px;
}

/* general hover interactions*/

.submit-button:hover,
.search-button:hover {
  color: #db7c00;
  background-color: #fff;
  outline: 2px solid #db7c00;
  text-shadow: none;
}

section.featured-products a img:hover,
section.promo-images a img:hover {
  outline: 5px solid #001e44;
  outline-offset: -5px;
}

section.welcome-banner a:hover {
  text-decoration: none;
  text-shadow: 4px 4px 2px #1d5ecc;
}

header a,
footer a {
  text-decoration: none;
  color: #fff;
  font-size: 1.2rem;
  font-weight: 500;
}

a:hover {
  text-decoration: underline;
}

/*standard wrappers for content (careful where adding to nav bar and footer)*/
.head-wrapper,
.page-wrapper {
  max-width: 1200px;
  width: 90%;
  margin: 0px auto;
}

/*-------  Navigation Mayhem  --------*/
/* need to add a drop shadow to the menu element maybe on smaller pages when it hits footer*/

ul {
  margin: 0;
  padding-left: 0;
  display: flex;
  justify-content: space-between;
}

li {
  display: block;
  float: left;
  padding: 1rem;
  text-decoration: none;
}

ul li ul {
  background: #1d5ecc;
  display: none;
  position: absolute;
  margin-top: 0px;
  left: 0px;
}

ul li.main-nav-cart ul {
  display: inline-flex;
  position: relative;
  background: none;
}

ul li ul li {
  background: #1d5ecc;
  position: relative;
  z-index: 1;
  /* put menu drop on top of page content highest number on top when multiples items use it, need pos fix/rel/absolute*/
}

ul li.main-nav-cart ul li {
  background: none;
}

/* search button might be better to combine some settings with other inputs also might
 need to make these stay together on the same line better when screen sizes shrink*/
.search-bar {
  margin-right: -30px;
  width: 80%;
  max-width: 250px;
}

.search-button {
  border-radius: 0px 5px 5px 0px;
  width: 90px;
  font-weight: 500;
  text-shadow: 2px 2px 2px #001e44;
}

/*show the check box menus*/
#search-drop-down:checked ~ ul,
#menu-drop-down:checked ~ ul {
  display: block;
}

.hamburger li,
.search li {
  width: 100vw;
}

.logo_mobile {
  padding-top: 10px;
  min-width: 80px;
  max-width: 180px;
  width: 100%;
}

.navigation-icons {
  min-width: 25px;
  max-width: 50px;
  width: 100%;
  padding-top: 20px;
  margin-bottom: 15px; /*to push drop downs down*/
}
/* new rules */
.desktop-logo {
  display: none;
}

/*-------  Footer styling  --------*/

footer img {
  padding: 5px;
}

.payment-icons img {
  max-width: 80px;
}

footer p {
  margin: 0;
  padding-top: 10px;
}

.foot-top {
  background: #1d5ecc;
  padding: 20px 0px;
}

.foot-bot {
  background: #001e44;
  padding: 20px 0px;
}

footer input {
  margin: 0;
  border: none;
  margin-right: -10px;
  width: 60%;
  max-width: 250px;
}

.footer-icon-flexbox {
  display: flex;
  justify-content: space-between;
  max-width: 500px;
}

.footer-copyright {
  text-align: center;
  padding: 30px 0px;
}

.footer-copyright p {
  font-size: 0.9rem;
}

/*quick links*/

.quick-links {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  grid-gap: 10px;
}

div.quick-links img {
  border-radius: 50%;
  width: 100%;
}

div.quick-links h3 {
  text-align: center;
}

/*------- Home Page Content ------*/
/*---banner and promo image styling --*/
.welcome-banner {
  background-image: url("../images/promo_and_home_photos/home_banner_small_dark.jpg");
  background-size: cover;
  min-height: 300px;
  background-repeat: no-repeat;
  background-position-x: center;
  background-position-y: top;
  position: relative;
}

section.welcome-banner p {
  font-size: 1.5rem;
  font-weight: 500;
}

.banner-content {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.welcome-banner a {
  font-size: 2rem;
  margin-bottom: 0;
  text-align: center;
  padding: 20px;
}

.welcome-banner a,
div.image-content p,
div.image-content h2 {
  text-decoration: none;
  color: #fff;
  text-shadow: 2px 2px 2px #001e44;
}

div.image-content p,
div.image-content h2 {
  text-decoration: none;
  color: #fff;
  text-shadow: 2px 2px 2px #001e44;
}

.promo-images-container {
  position: relative;
}

.image-content {
  position: absolute;
  top: 10%;
  left: 10%;
}

div.image-content h2 {
  font-size: 2rem;
  margin: 10px 0px 0px 0px;
}

div.image-content p {
  margin: 0 30px 0 0;
  font-size: 1.5rem;
  font-weight: 600;
}

section.promo-images img {
  width: 100%;
  margin: 10px 0px;
}

/* bestsellers/product list page */

.product-list-grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-auto-rows: 1fr;
  row-gap: 22px;
  margin-bottom: 50px;
}

.product-item {
  background-color: #f0f0f0;
  display: grid;
  grid-template-rows: auto 2/5 3/5 auto;
  border: 1px black;
  height: 100%;
}

.product-item img {
  width: 100%;
}

dl {
  margin: 5px 0;
}

@media only screen and (min-width: 700px) {
  .promo-images-grid,
  .foot-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .promo-images-grid {
    grid-gap: 20px;
  }

  section.foot-bot p {
    display: inline-block;
    margin-right: 20px;
  }

  .product-list-grid {
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 25px;
  }

  .small-wide-images {
    display: none;
  }

  .medium-images {
    display: inline-block;
  }
}

@media only screen and (min-width: 945px) {
  .small-images,
  .mobile-nav,
  .hide-quick-links,
  .medium-images,
  .mobile-screen {
    display: none;
  }

  .large-images {
    display: inline-block;
  }

  .product-list-grid {
    grid-template-columns: repeat(4, 1fr);
  }

  .welcome-banner {
    background-image: url("../images/promo_and_home_photos/home_banner_large_dark.jpg");
  }

  /*The hell that is my nav bar re-construction, still not happy with it!!!!*/
  header {
    background: linear-gradient(#001e44, #001e44 112px, #1d5ecc 113px, #1d5ecc);
  }

  .main-nav-container {
    display: grid;
    grid-template-areas:
      "logo search cart"
      "logo nav contact";
    grid-template-columns: auto 1fr auto;
    grid-template-rows: auto auto;
    align-items: center;
  }

  .main-nav-logo {
    grid-area: logo;
  }
  .main-nav-search {
    grid-area: search;
  }
  .main-nav-cart {
    grid-area: cart;
  }
  .main-nav-menu {
    grid-area: nav;
    display: grid;
  }
  .main-nav-contact {
    grid-area: contact;
  }

  .hamburger li,
  .search li {
    display: inline;
    margin: 0;
    width: 80%;
  }

  #search-drop-down ~ ul,
  #menu-drop-down ~ ul {
    display: block;
    width: 100%;
  }

  .head-wrapper {
    width: 100%;
  }

  .desktop-logo {
    display: block;
    max-width: 200px;
    padding-bottom: 30px;
  }

  .navigation-icons {
    max-width: 30px;
    padding-top: 0px;
    padding-left: 15px;
    margin-bottom: 0px; /*to push drop downs down*/
  }

  .desktop-nav-account,
  .desktop-nav {
    display: inline;
  }

  .desktop-nav-account {
    margin-left: 10px;
  }

  ul li ul,
  ul li ul li {
    background: none;
  }

  li {
    display: inline-flex;
    float: none;
    position: relative;
  }
  ul {
    display: grid;
  }

  ul li.main-nav-search ul,
  ul li.main-nav-menu ul,
  ul li.main-nav-contact ul {
    display: inline-flex;
    position: relative;
    background: none;
    height: fit-content;
  }
}

